bug 106158 - changed outer table fix up of nested inner table's computed width to consider if the min width fits. removed tree specific code. sr=waterson, r=alexsavulov.